# sig-rust

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  LICENSE.md  README.md  justfile  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cicd.yml  publish.yml
plans/: performance-optimization-v2.md  performance-optimization.md
python/sig_rust/: __init__.py  _lib.pyi
python/tests/: conftest.py  test_python_bindings.py
scripts/: benchmark.py  benchmark_full.py
src/: algebra.rs  backprop.rs  bch.rs  error.rs  lib.rs  logsignature.rs  lyndon.rs  python.rs  rotational.rs  signature.rs  transforms.rs  types.rs
